Minecraft X-Ray 3.4.1 (2011.10.15)

  * Updated Air Portal rendering to Beta 1.9-pre4
  * Added Ender Stone block from Beta 1.9-pre4
  * Set "The End" as a known dimension, for the level list
  * Rename AIR_PORTAL and AIR_PORTAL_FRAME to ENDER_PORTAL and
    ENDER_PORTAL_FRAME
  * Change minimap orientation to match the official internal Minecraft
    directions in Beta 1.9-pre4 (when the sunrise was changed from
	North to East)

Minecraft X-Ray 3.4.0 (2011.10.11)

  * New Functions:
    * The "C" key will toggle the new-style fence connection rendering,
      introduced in Beta 1.9-pre2
    * The "V" key will toggle Silverfish block highlighting on/off
    * The "U" key will toggle the rendering of chunk borders
    * Slime-spawning chunks can be highlighted with the "M" key.
    * "Y" will bring up a window with a keyboard reference

  * Rendering Improvements:
    * Support for the new Beta 1.9-pre3 blocks
    * Highlighting on solid blocks so they look more three-dimensional
    * Stems now connect to neighboring fruit properly
    * Slight improvements to fence and fence gate rendering accuracy
    * Fixed an issue with grass colorization on some texturepacks
    * Block and chunk information in the positioning popup are now
      slightly more accurate.
    * Farmland block tweaked slightly
    * Tweaked ore highlighting to be more noticeable
    * Tweaked coloring for vines, stems, tall grass, and lilypads
    * Explored highlighting will now key off of redstone torches,
      Glowstone, and Jack-O-Lanterns, in addition to regular torches
    * By default, silverfish blocks are highlighted in red.
    * Reverted back to having "open space" at the edges of the map,
      instead of a large wall

  * Internal Changes:
    * Added "texfile" entry in block definition YAML, to support mods
      which use an entire new sheet of textures
    * Updated to LWJGL 2.8.0
    * Use log4j for file logging and console error reporting